--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,28 +11,13 @@ on:
       - develop
       - 'feature/**'
 jobs:
-  test:
-    name: Check sever side script
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php-version: ['8.0']
     steps:
-      - name: Setup PHP ${{ matrix.php-version }}
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-      - name: checkout 
-        uses: actions/checkout@v2
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: check composer.json
-        run: composer validate
-      - name: Install dependencies composer packages
-        run: composer install --prefer-dist --no-progress --no-suggest
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      - name: Run test suite
-        run: sail artisan test
+    - uses: actions/checkout@v1
+    - name: phpunit
+      run: |
+        php -v
+        docker-compose up -d
+        composer install
+        php artisan test
