--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=sail
-DB_PASSWORD=
+DB_PASSWORD=password
 FORWARD_DB_PORT=3307
 
 BROADCAST_DRIVER=log
