--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
+      - name: checkout 
+        uses: actions/checkout@v2
       # dockerコンテナを起動
       - name: docker-compose up
         run: docker-compose up -d
