--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ on:
       - 'feature/**'
 jobs:
   build:
-  app-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Setup PHP ${{ matrix.php-version }}
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
-      - uses: actions/checkout@v2
+      - name: checkout 
+        uses: actions/checkout@v2
       # dockerコンテナを起動
       - name: docker-compose up
         run: docker-compose up -d
