--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "friendsofphp/php-cs-fixer": "^3.3",
         "laravel/sail": "^1.11",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
@@ -45,6 +47,14 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpcs": "phpcs --standard=phpcs.xml",
+        "phpcbf": "phpcbf --standard=phpcs.xml",
+        "phpcsfixer": "php-cs-fixer fix -v --diff --ansi",
+        "lint": [
+            "@phpcbf",
+            "@phpcs",
+            "@phpcsfixer"
         ]
     },
     "extra": {
