--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,5 @@ jobs:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
+      - name: run php lint
+        run: composer lint
