--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 /node_modules
-/public
+/public/hot
+/public/build
+/public/storage
 /storage/*.key
 /vendor
 .env
+.env.testing
 .env.backup
 .phpunit.result.cache
+.php-cs-fixer.cache
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
@@ -12,3 +16,4 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+.php-cs-fixer.cache
