--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
           DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
       - name: run php lint
-        run: composer lint
+        run: composer phpcs
